2012-03-22  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/ieee754/ldbl-128/k_cosl.c (__kernel_cosl): Negate y if
	negating x to take absolute value.
	* sysdeps/ieee754/ldbl-128/k_sincosl.c (__kernel_sincosl):
	Likewise.
	* sysdeps/ieee754/ldbl-128ibm/k_cosl.c (__kernel_cosl): Likewise.
	* sysdeps/ieee754/ldbl-128ibm/k_sincosl.c (__kernel_sincosl):
	Likewise.
	* sysdeps/ieee754/ldbl-128/k_sinl.c (__kernel_sinl): Negate y when
	computing low part if x was negated.
	* sysdeps/ieee754/ldbl-128ibm/k_sinl.c (__kernel_sinl): Likewise.

2012-03-21  H.J. Lu  <hongjiu.lu@intel.com>

	* elf/tst-auditmod1.c: Support la_x32_gnu_pltenter and
	la_x32_gnu_pltexit.
	(pltexit): Cast int_retval to ptrdiff_t.
	* elf/tst-auditmod3b.c: Likewise.
	* elf/tst-auditmod4b.c: Likewise.
	* elf/tst-auditmod5b.c: Likewise.
	* elf/tst-auditmod6b.c: Likewise.
	* elf/tst-auditmod6c.c: Likewise.
	* elf/tst-auditmod7b.c: Likewise.

	* sysdeps/generic/ldsodefs.h (audit_ifaces): Add x32_gnu_pltenter
	and x32_gnu_pltexit.

	* sysdeps/x86_64/bits/link.h: Check __x86_64__ instead of
	__ELF_NATIVE_CLASS.
	(La_x32_regs): New macro.
	(La_x32_retval): Likewise.
	(la_x32_gnu_pltenter): New function prototype.
	(la_x32_gnu_pltexit): Likewise.

2012-03-21  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/ieee754/ldbl-128ibm/e_powl.c (huge, tiny): Correct
	exponent.

	* sysdeps/powerpc/fpu/libm-test-ulps: Update.

	* configure.in (libc_cv_cc_nofma): Check for option to disable
	generation of FMA instructions.
	* configure: Regenerate.
	* config.make.in (config-cflags-nofma): Set from libc_cv_cc_nofma.
	* sysdeps/ieee754/dbl-64/Makefile: New file.
	* sysdeps/x86_64/fpu/multiarch/Makefile (libm-sysdep_routines):
	Remove brandred-fma4.
	(CFLAGS-brandred-fma4.c): Remove.
	* sysdeps/x86_64/fpu/multiarch/brandred-fma4.c: Remove.
	* sysdeps/x86_64/fpu/multiarch/s_sin-fma4.c (__branred): Don't
	define.
	* sysdeps/x86_64/fpu/multiarch/s_tan-fma4.c (__branred): Don't
	define.
